feat: git ignore working files and ide stuff

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,24 @@ ip_monitor-*.tar
 
 # Temporary files, for example, from tests.
 /tmp/
+
+# -----
+
+# Ignore Working files
+OLD.*
+ORIG.*
+TEST.*
+BACK.*
+
+# Ignore OSX files
+.DS_Store
+
+# Ignore editors and IDE
+.idea
+.vscode
+
+# Ignore Vim
+*.swp
+
+# Ignore Emacs
+.#*
